[38;2;190;132;255mcabal-version[0m[38;2;166;226;46m:[0m[38;2;166;226;46m       [0m[38;2;248;248;242m2.4[0m

[38;2;190;132;255mname[0m[38;2;166;226;46m:[0m[38;2;166;226;46m                [0m[38;2;248;248;242msemantic[0m
[38;2;190;132;255mversion[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242m0.11.0.1[0m
[38;2;190;132;255msynopsis[0m[38;2;166;226;46m:[0m[38;2;166;226;46m            [0m[38;2;248;248;242mFramework and executable for analyzing and diffing untrusted code.[0m
[38;2;190;132;255mdescription[0m[38;2;166;226;46m:[0m[38;2;166;226;46m         [0m[38;2;248;248;242mSemantic is a library for parsing, analyzing, and comparing source code across many languages.[0m
[38;2;190;132;255mhomepage[0m[38;2;166;226;46m:[0m[38;2;166;226;46m            [0m[38;2;248;248;242mhttp://github.com/github/semantic#readme[0m
[38;2;190;132;255mbug-reports[0m[38;2;166;226;46m:[0m[38;2;166;226;46m         [0m[38;2;248;248;242mhttps://github.com/github/semantic/issues[0m
[38;2;190;132;255mlicense[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242mMIT[0m
[38;2;190;132;255mlicense-file[0m[38;2;166;226;46m:[0m[38;2;166;226;46m        [0m[38;2;248;248;242mLICENSE[0m
[38;2;190;132;255mauthor[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mThe Semantic authors[0m
[38;2;190;132;255mmaintainer[0m[38;2;166;226;46m:[0m[38;2;166;226;46m          [0m[38;2;248;248;242mopensource+semantic@github.com[0m
[38;2;190;132;255mcopyright[0m[38;2;166;226;46m:[0m[38;2;166;226;46m           [0m[38;2;248;248;242m(c) 2015-2020 GitHub, Inc.[0m
[38;2;190;132;255mcategory[0m[38;2;166;226;46m:[0m[38;2;166;226;46m            [0m[38;2;248;248;242mLanguage[0m
[38;2;190;132;255mbuild-type[0m[38;2;166;226;46m:[0m[38;2;166;226;46m          [0m[38;2;248;248;242mSimple[0m
[38;2;190;132;255mstability[0m[38;2;166;226;46m:[0m[38;2;166;226;46m           [0m[38;2;248;248;242malpha[0m
[38;2;190;132;255mextra-source-files[0m[38;2;166;226;46m:[0m[38;2;166;226;46m  [0m[38;2;248;248;242mREADME.md[0m

[38;2;190;132;255mtested-with[0m[38;2;166;226;46m:[0m[38;2;166;226;46m         [0m[38;2;248;248;242mGHC == 8.10.1[0m

[38;2;249;38;114mflag[0m[38;2;166;226;46m [0m[38;2;230;219;116mrelease[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mdescription[0m[38;2;166;226;46m:[0m[38;2;166;226;46m [0m[38;2;248;248;242mBuild with optimizations on (for CI or deployment builds)[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mdefault[0m[38;2;166;226;46m:[0m[38;2;166;226;46m     [0m[38;2;248;248;242mFalse[0m

[38;2;117;113;94m-- GHC extensions shared between targets[0m
[38;2;248;248;242mcommon haskell[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mdefault-language[0m[38;2;166;226;46m:[0m[38;2;166;226;46m    [0m[38;2;248;248;242mHaskell2010[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mdefault-extensions[0m[38;2;166;226;46m:[0m[38;2;166;226;46m  [0m[38;2;248;248;242mStrictData[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mghc-options[0m[38;2;166;226;46m:[0m
[38;2;248;248;242m    -Weverything[0m
[38;2;248;248;242m    -Wno-missing-local-signatures[0m
[38;2;248;248;242m    -Wno-missing-import-lists[0m
[38;2;248;248;242m    -Wno-implicit-prelude[0m
[38;2;248;248;242m    -Wno-safe[0m
[38;2;248;248;242m    -Wno-unsafe[0m
[38;2;248;248;242m    -Wno-name-shadowing[0m
[38;2;248;248;242m    -Wno-monomorphism-restriction[0m
[38;2;248;248;242m    -Wno-missed-specialisations[0m
[38;2;248;248;242m    -Wno-all-missed-specialisations[0m
[38;2;248;248;242m    -Wno-star-is-type[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mcpp-options[0m[38;2;166;226;46m:[0m
[38;2;248;248;242m    -DBAZEL_BUILD=0[0m
[38;2;248;248;242m  if (impl(ghc >= 8.8))[0m
[38;2;166;226;46m    [0m[38;2;190;132;255mghc-options[0m[38;2;166;226;46m:[0m[38;2;166;226;46m [0m[38;2;248;248;242m-Wno-missing-deriving-strategies[0m
[38;2;248;248;242m  if (impl(ghc >= 8.10))[0m
[38;2;166;226;46m    [0m[38;2;190;132;255mghc-options[0m[38;2;166;226;46m:[0m
[38;2;248;248;242m      -Wno-missing-safe-haskell-mode[0m
[38;2;248;248;242m      -Wno-prepositive-qualified-module[0m

[38;2;248;248;242mcommon executable-flags[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mghc-options[0m[38;2;166;226;46m:[0m[38;2;166;226;46m         [0m[38;2;248;248;242m-threaded -rtsopts "-with-rtsopts=-N -A4m -n2m"[0m

[38;2;249;38;114mlibrary[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mimport[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mhaskell[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mhs-source-dirs[0m[38;2;166;226;46m:[0m[38;2;166;226;46m      [0m[38;2;248;248;242msrc[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mexposed-modules[0m[38;2;166;226;46m:[0m[38;2;166;226;46m     [0m[38;2;248;248;242mControl.Carrier.Parse.Measured[0m
[38;2;248;248;242m                     , Control.Carrier.Parse.Simple[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- Effects[0m
[38;2;248;248;242m                     , Control.Effect.Parse[0m
[38;2;248;248;242m                     , Control.Effect.Sum.Project[0m
[38;2;248;248;242m                     , Control.Effect.Timeout[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- General datatype definitions & generic algorithms[0m
[38;2;248;248;242m                     , Data.Blob[0m
[38;2;248;248;242m                     , Data.Blob.IO[0m
[38;2;248;248;242m                     , Data.Duration[0m
[38;2;248;248;242m                     , Data.Edit[0m
[38;2;248;248;242m                     , Data.Error[0m
[38;2;248;248;242m                     , Data.Flag[0m
[38;2;248;248;242m                     , Data.Graph.Algebraic[0m
[38;2;248;248;242m                     , Data.Handle[0m
[38;2;248;248;242m                     , Data.Maybe.Exts[0m
[38;2;248;248;242m                     , Data.Semigroup.App[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- Parser glue[0m
[38;2;248;248;242m                     , Parsing.Parser[0m
[38;2;248;248;242m                     , Parsing.TreeSitter[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- API[0m
[38;2;248;248;242m                     , Semantic.Api[0m
[38;2;248;248;242m                     , Semantic.Api.Bridge[0m
[38;2;248;248;242m                     , Semantic.Api.StackGraph[0m
[38;2;248;248;242m                     , Semantic.Api.Symbols[0m
[38;2;248;248;242m                     , Semantic.Api.Terms[0m
[38;2;248;248;242m                     , Semantic.CLI[0m
[38;2;248;248;242m                     , Semantic.Config[0m
[38;2;248;248;242m                     , Semantic.Env[0m
[38;2;248;248;242m                     , Semantic.IO[0m
[38;2;248;248;242m                     , Semantic.Task[0m
[38;2;248;248;242m                     , Semantic.Task.Files[0m
[38;2;248;248;242m                     , Semantic.Telemetry[0m
[38;2;248;248;242m                     , Semantic.Telemetry.AsyncQueue[0m
[38;2;248;248;242m                     , Semantic.Telemetry.Error[0m
[38;2;248;248;242m                     , Semantic.Telemetry.Log[0m
[38;2;248;248;242m                     , Semantic.Telemetry.Stat[0m
[38;2;248;248;242m                     , Semantic.Util[0m
[38;2;248;248;242m                     , Semantic.Util.Pretty[0m
[38;2;248;248;242m                     , Semantic.Version[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- Serialization[0m
[38;2;248;248;242m                     , Serializing.Format[0m
[38;2;248;248;242m                     , Serializing.SExpression.Precise[0m
[38;2;248;248;242m                     [0m[38;2;117;113;94m-- Custom Prelude[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mautogen-modules[0m[38;2;166;226;46m:[0m[38;2;166;226;46m     [0m[38;2;248;248;242mPaths_semantic[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mother-modules[0m[38;2;166;226;46m:[0m[38;2;166;226;46m       [0m[38;2;248;248;242mPaths_semantic[0m
[38;2;248;248;242m  [0m[38;2;117;113;94m-- Except in case of vendored dependencies, these deps should be expressed[0m
[38;2;248;248;242m  [0m[38;2;117;113;94m-- as caret-operator bounds relative to a version in Stackage.[0m
[38;2;248;248;242m  [0m[38;2;117;113;94m-- These are currently pinned to lts-13.13.[0m
[38;2;248;248;242m  [0m[38;2;190;132;255mbuild-depends[0m[38;2;248;248;242m:[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239maeson[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.4.2.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239malgebraic-graphs[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mansi-terminal[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.2[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;190;132;255m1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239masync[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.2.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbase[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.13[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m5[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbytestring[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.10.8.2[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mcontainers[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.6.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mdirectory-tree[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.12.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mfilepath[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.4.2.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mfused-effects[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mghc-prim[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.7[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mhostname[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mhscolour[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.24.4[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mlens[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.17[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.20[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mnetwork[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.8.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mnetwork-uri[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.6.1.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239moptparse-applicative[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.14.3[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.16[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mpathtype[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mpretty-show[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.9.5[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mproto-lens[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-analysis[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-ast[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-codeql[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-go[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-java[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-json[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-php[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-proto[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-python[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-ruby[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-scope-graph[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-source[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.1.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-tags[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-tsx[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-typescript[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemilattices[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.0.0.3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msplit[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.2.3.3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mstm-chans[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m3.0.0.4[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtext[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.2.3.2[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtime[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.8.0.2[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.10[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.9.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-go[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-java[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.7.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-json[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.7.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-php[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-python[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.9.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-ql[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.1.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-ruby[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-tsx[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtree-sitter-typescript[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.5.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239munix[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.7.2.2[0m

[38;2;249;38;114mexecutable[0m[38;2;166;226;46m [0m[38;2;230;219;116msemantic[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mimport[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mhaskell, executable-flags[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mhs-source-dirs[0m[38;2;166;226;46m:[0m[38;2;166;226;46m      [0m[38;2;248;248;242mapp[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mmain-is[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242mMain.hs[0m
[38;2;248;248;242m  [0m[38;2;190;132;255mbuild-depends[0m[38;2;248;248;242m:[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbase[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic[0m

[38;2;249;38;114mtest-suite[0m[38;2;166;226;46m [0m[38;2;230;219;116mtest[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mimport[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mhaskell, executable-flags[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mtype[0m[38;2;166;226;46m:[0m[38;2;166;226;46m                [0m[38;2;248;248;242mexitcode-stdio-1.0[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mhs-source-dirs[0m[38;2;166;226;46m:[0m[38;2;166;226;46m      [0m[38;2;248;248;242mtest[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mmain-is[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242mSpec.hs[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mother-modules[0m[38;2;166;226;46m:[0m[38;2;166;226;46m       [0m[38;2;248;248;242mData.Graph.Spec[0m
[38;2;248;248;242m                     , Data.Language.Spec[0m
[38;2;248;248;242m                     , Data.Semigroup.App.Spec[0m
[38;2;248;248;242m                     , Integration.Spec[0m
[38;2;248;248;242m                     , Semantic.Spec[0m
[38;2;248;248;242m                     , Semantic.CLI.Spec[0m
[38;2;248;248;242m                     , Semantic.IO.Spec[0m
[38;2;248;248;242m                     , Semantic.Stat.Spec[0m
[38;2;248;248;242m                     , Tags.Spec[0m
[38;2;248;248;242m                     , SpecHelpers[0m
[38;2;248;248;242m                     , Generators[0m
[38;2;248;248;242m                     , Properties[0m
[38;2;248;248;242m  [0m[38;2;190;132;255mbuild-depends[0m[38;2;248;248;242m:[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239malgebraic-graphs[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbase[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.13[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m5[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbytestring[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.10.8.2[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mfused-effects[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mGlob[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.10.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mhedgehog[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mhspec[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.6[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;190;132;255m3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mhspec-expectations[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.2[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mnetwork[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.8.0.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mpathtype[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-analysis[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-ast[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-proto[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-source[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.1.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-tags[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemilattices[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.2.3[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty-golden[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.3.2[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty-hedgehog[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.0.0.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty-hspec[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.1.5.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty-hunit[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.10.0.2[0m

[38;2;249;38;114mtest-suite[0m[38;2;166;226;46m [0m[38;2;230;219;116mparse-examples[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mimport[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mhaskell, executable-flags[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mtype[0m[38;2;166;226;46m:[0m[38;2;166;226;46m                [0m[38;2;248;248;242mexitcode-stdio-1.0[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mhs-source-dirs[0m[38;2;166;226;46m:[0m[38;2;166;226;46m      [0m[38;2;248;248;242mtest[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mmain-is[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242mExamples.hs[0m
[38;2;248;248;242m  [0m[38;2;190;132;255mbuild-depends[0m[38;2;248;248;242m:[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239masync[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m2.2.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbase[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mfused-effects[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mGlob[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mlens[0m[38;2;248;248;242m [0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.17[0m[38;2;248;248;242m [0m[38;2;249;38;114m&&[0m[38;2;248;248;242m [0m[38;2;249;38;114m<[0m[38;2;248;248;242m [0m[38;2;190;132;255m4.20[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mpathtype[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mprocess[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.6.3.0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-analysis[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-ast[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-proto[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtasty-hunit[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mtext[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.2.3.2[0m

[38;2;249;38;114mbenchmark[0m[38;2;166;226;46m [0m[38;2;230;219;116mbenchmarks[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mimport[0m[38;2;166;226;46m:[0m[38;2;166;226;46m              [0m[38;2;248;248;242mhaskell, executable-flags[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mhs-source-dirs[0m[38;2;166;226;46m:[0m[38;2;166;226;46m      [0m[38;2;248;248;242mbench[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mtype[0m[38;2;166;226;46m:[0m[38;2;166;226;46m                [0m[38;2;248;248;242mexitcode-stdio-1.0[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mmain-is[0m[38;2;166;226;46m:[0m[38;2;166;226;46m             [0m[38;2;248;248;242mMain.hs[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mother-modules[0m[38;2;166;226;46m:[0m[38;2;166;226;46m       [0m[38;2;248;248;242mTagging[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mghc-options[0m[38;2;166;226;46m:[0m[38;2;166;226;46m         [0m[38;2;248;248;242m-static[0m
[38;2;248;248;242m  [0m[38;2;190;132;255mbuild-depends[0m[38;2;248;248;242m:[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mbase[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mfused-effects[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m1.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mgauge[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.2.5[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mGlob[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239mpathtype[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0.8.1[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-analysis[0m[38;2;248;248;242m ^[0m[38;2;249;38;114m>=[0m[38;2;248;248;242m [0m[38;2;190;132;255m0[0m
[38;2;248;248;242m    , [0m[38;2;102;217;239msemantic-proto[0m

[38;2;249;38;114msource-repository[0m[38;2;166;226;46m [0m[38;2;230;219;116mhead[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mtype[0m[38;2;166;226;46m:[0m[38;2;166;226;46m     [0m[38;2;248;248;242mgit[0m
[38;2;166;226;46m  [0m[38;2;190;132;255mlocation[0m[38;2;166;226;46m:[0m[38;2;166;226;46m [0m[38;2;248;248;242mhttps://github.com/github/semantic[0m
